# mapping-news

./: .gitignore  README.md  cache.json  next.config.js  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  tailwind.config.js  tsconfig.json
.github/workflows/: parse-feeds.yml  validate-cache.yml
actions/: CacheManager.py  feedParser.py  feedParser.ts  types_consts.py  updateCloudCache.py  validateCache.py
app/: CursorAnimation.tsx  constants.ts  globals.css  layout.tsx  loading.tsx  manifest.json  manifest.ts  middleware.ts  page.tsx  providers.tsx  sitemap.ts
app/about/: layout.tsx  page.tsx
app/default/: opengraph-image.tsx  page.tsx
app/linknyc/: layout.tsx
app/nyc/: About.tsx  ArticleEntry.tsx  ArticleEntryClient.tsx  ArticleLineItem.tsx  ArticleLocationEntry.tsx  MapComponent.tsx  MapComponentClient.tsx  MapLoadingSkeleton.tsx  MapModal.tsx  ModifiedEntries.tsx  ResponsiveSidebar.tsx  Tutorial.tsx  error.tsx  fetchLocations.ts  getPlaceIdRelativeHref.ts  initializeMap.tsx  layout.tsx  page.tsx  types.ts  useSelectedArticle.ts  useSelectedPlace.ts  utils.ts
app/nyc2/: MapComponent.tsx  ResponsivePanelWrapper.tsx  getPlaceIdRelativeHref.ts  layout.tsx  page.tsx
app/one/: page.tsx
app/two/: ArticleLineItem.tsx  page.tsx  types.ts
components/home/: card.tsx  component-grid.tsx  demo-modal.tsx
components/layout/: footer.tsx  navbar.tsx
components/shared/: deprecation-dialog.tsx  link.tsx  modal.tsx  popover.tsx  theme-toggle.tsx  (+3 more)
sql/: README.md  get_location_stats.sql  get_sorted_location_article_relations.sql
supabase/: config.toml
(+62 files in other folders)
